test/invalid-semantics/fc66494_missing_function/missing_function.mag
-- Author: 66494, Tiago Silva

fun main (_) : Unit -> Unit =
    print(funky_func(3))